refactor(security): 重构 AES 加密工具，统一加密实现并废弃旧类
- AesUtils 内部加密解密逻辑委托 CryptoProviderRegistry 实现算法路由
- 支持 128/192/256 位密钥自动匹配对应 AES-GCM Provider
- AesGcmCrypto 标记废弃，兼容旧密文格式，建议新代码使用 CryptoUtils
- 优化加密解密代码，移除 Hex 密钥缓存机制，代码更简洁清晰

refactor(concurrent): 增强 MeteredThreadPoolExecutor 任务统计能力

- 在 submit 方法添加对 Callable 和 Runnable 的包装支持，统一计数
- 将任务失败统计由 afterExecute 移到包装器内部，避免 submit 路径异常丢失
- 添加任务执行耗时统计与慢任务检测，融合 Micrometer 指标上报
- 新增 MeteredCallable 任务包装器，补齐 Callable 异常统计覆盖

chore(deps): 新增 JSR-305 注解依赖支持空安全标注

- 添加 jsr305 依赖，支持 @Nonnull 和 @Nullable 注解声明

refactor(auth): 为 AuthInfo 接口添加 @Nonnull/@Nullable 空安全注解

- 补充 AuthInfo 各方法的空值语义注解，提升静态分析友好度

refactor(crypto): 统一 CryptoProvider 接口方法添加空安全注解

- 为 CryptoProvider 接口加密/解密相关方法及属性添加 @Nonnull/@Nullable
- 明确算法标识、密钥生成、IV 生成、加解密参数的空值要求

refactor(crypto): 优化 CryptoProviderRegistry 注册逻辑与异常处理

- 去除 BouncyCastle 预先提供判断，改为无条件尝试注册 SM4 Provider
- 捕获 NoClassDefFoundError 以兼容无 BC 情况，保证注册流程安全
- 日志明确提示 SM4 Provider 注册结果和原因

refactor(collection): 弃用 toBean 方法，推荐使用 JSON 框架或 Record

- 标注 MapUtils.toBean 各重载方法废弃，forRemoval=true
- 建议迁移到 JSON 框架转换或调用 toBeanOrRecord 推荐用法

refactor(id): 标记 FilePersistedWorkerIdAllocator 废弃，建议配置指引

- 弃用 FilePersistedWorkerIdAllocator，推荐使用显式配置或 PodOrdinal/iphash 分配
- 说明开发、生产环境推荐方案，方便用户迁移

feat(password): 增强 PwdUtils，新增 BCrypt 可用性检测及引导

- 添加 isBcryptAvailable 方法判断依赖是否在类路径
- 在 hashPasswordBCrypt 和 verifyPasswordBCrypt 调用前校验依赖可用性
- 依赖缺失时抛出异常并提示引入说明，提升用户体验
- PasswordStrength 枚举标记废弃，推荐使用 PasswordStrengthChecker 五档评分

docs(readme): 清理 README 中未实现类的文档描述，精准对齐源码

- 移除 SnowflakeUtils、JcaCipherPool 等不存在类相关描述，避免误导
- 精简模块定位、核心能力介绍，突出当前模块真实实现内容

style(util): ExecutorUtils 添加丰富线程池创建说明和使用指南

- 补充类注释，表格形式展示各线程池创建方法及推荐场景
- 方便使用者快速选择合适线程池并了解功能特点